# enocean_to_hue

./: .gitignore  CMakeLists.txt  README.md  TODO.txt  command_mapping.cpp  command_mapping.hpp  crc8.cpp  crc8.hpp  debug_posix.cpp  enocean.hpp  enocean_serial.cpp  enocean_serial.hpp  enocean_serial_posix.cpp  enocean_serial_posix.hpp  enocean_to_hue_bridge.cpp  enocean_to_hue_bridge.hpp  hue_sensor_command.cpp  hue_sensor_command.hpp  hue_sensor_command_posix.cpp  hue_sensor_command_posix.hpp  main.cpp  make_embedded_config.py
embedded/: .gitignore  crc8.cpp  debug.hpp  embedded_main.cpp  embedded_syslog.hpp  enocean.hpp  enocean_serial.cpp  hue_sensor_command.cpp  hue_sensor_command.hpp  hue_sensor_command_embedded.cpp  hue_sensor_command_embedded.hpp  platformio.ini  user_config_example.hpp
embedded/include/: crc8.hpp  enocean_serial.hpp  enocean_serial_esp8266.hpp  hue_sensor_command.hpp  hue_sensor_command_embedded.hpp
embedded/src/: debug_stream_embedded.cpp  embedded_main.cpp  embedded_syslog.cpp  enocean_serial_esp8266.cpp  hue_sensor_command.cpp  hue_sensor_command_embedded.cpp  src.ino
example/: README.md  enocean_to_hue_gw  example.conf  install_cfg.sh  install_enocean.sh  make_arm.sh  toolchain_arm.cmake
